Code Tab CSS and Sizing Issues Fixed
I changed the width of the CodeFlask text area (located in codeflask.min.js) to 99% and the height to 97% to prevent the the CodeFlask text area from overlapping the toolbox and the container outline.

I also changed the #robotcode CSS height to 600px to match the height of the toolbox in index.css

--- a/index.css
+++ b/index.css
@@ -174,7 +174,7 @@ input[type=text] {
 
 #robotCode {
 	width: 800px; /* was 800 */
-	height: 595px; /* was 588 */
+	height: 600px; /* was 588 */
 	border: 1px solid lightblue;
 	font-family: monospace;
 	font-size: 14pt;
